src/assets/projects/roc/css/global.scss
/* ... */
.dashboard-portfolio {
    /* Auto layout */

    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 32px 0px 8px;
    gap: 8px;
    margin-top: 24px;
    border-radius: var(--card-border-radius);

    /*position: absolute;*/
    width: 1184px;
    /*height: auto;*/
    /*left: 130px;
  top: 240px;*/

    background: var(--surface-color-1);
    box-shadow: var(--surface-shadow-1);

    .tokens-card-content {
        /* Auto layout */

        display: flex;
        flex-direction: column;
        align-items: flex-start;
        padding: 0px 32px;
        gap: 4px;

        width: 1184px;
        /*height: 372px;*/
    }
}

.tokens-list-header {
    /* Auto layout */

    display: flex;
    flex-direction: row;
    align-items: flex-start;
    padding: 0px;
    gap: 311px;

    width: 1120px;
    height: 49px;

    /* Inside auto layout */

    flex: none;
    order: 0;
    align-self: stretch;
    flex-grow: 0;
}

.tokens-list-header-title {
    /* Auto layout */

    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 0px;
    gap: 8px;

    width: 668px;
    height: 24px;

    /* Card Contents/Card Title */

    font-family: var(--brand-font);
    font-weight: 700;
    font-size: 20px;
    line-height: 24px;
    /* identical to box height */

    /* Text/Text Primary */

    color: var(--color-text-primary);

    /* Inside auto layout */

    flex: none;
    order: 0;
    flex-grow: 1;
}

.tokens-list-header-balance {
    /* Auto layout */

    display: flex;
    flex-direction: column;
    align-items: flex-end;
    padding: 0px;
    gap: 4px;

    width: 141px;
    height: 49px;

    /* Inside auto layout */

    flex: none;
    order: 1;
    flex-grow: 0;
    margin-top: 30px;
}

.tokens-list-header-balance-number {
    width: 141px;
    height: 24px;

    font-family: var(--brand-font);
    font-weight: 600;
    font-size: 18px;
    text-align: right;
    color: var(--color-text-primary);

    /* Inside auto layout */

    flex: none;
    order: 0;
    flex-grow: 0;
}

.tokens-list-header-balance-title {
    width: 130px;
    height: 21px;

    font-family: var(--main-font);
    font-style: normal;
    font-size: 10px;
    font-weight: 600;
    font-style: SemiBold;
    letter-spacing: 1.2px;
    text-align: right;
    text-transform: uppercase;
    line-height: 16px;

    color: (var(--color-text-secondary));

    /* Inside auto layout */

    flex: none;
    order: 1;
    flex-grow: 0;
}

.tokens-list-table {
    width: 1120px;
    /*height: 299px;*/

    /* Inside auto layout */

    flex: none;
    order: 1;
    flex-grow: 0;
    margin-top: 40px;
}

/* Table tokens */

.ant-table {
    margin-bottom: 32px;
}

.ant-table-thead > tr > th {
    font-family: var(--main-font);
    font-style: normal;
    font-size: 16px;
    line-height: 19px;
    /* identical to box height */
    padding: 3px 8px !important;
    font-weight: 700;
    background-color: transparent;
}

.ant-table {
    /* List/List Data */

    font-family: var(--main-font);
    font-style: normal;
    font-weight: 600;
    font-size: 14px;
    font-style: SemiBold;
    letter-spacing: 0.61px;
    line-height: 19px;
    /* identical to box height */
    background-color: transparent;
    color: var(--color-text-primary);
}

.ant-table-thead .ant-table-cell {
    color: var(--color-text-secondary);
    font-size: 16px;
    font-weight: 700;
    font-style: Bold;
    border-bottom: 1px solid var(--dividers);
}

.ant-table-container table > thead > tr:first-child th:last-child {
    border-top-right-radius: 0;
    // border: 0;
    // visibility: hidden;
}

.ant-table-cell::before {
    visibility: hidden;
}

.ant-table-tbody > tr.ant-table-row:hover > td,
.ant-table-tbody > tr > td.ant-table-cell-row-hover {
    // background: #d0d0d0;
}

// .ant-table-body::-webkit-scrollbar {
//     width: 6px;
// }

// .ant-table-body::-webkit-scrollbar-track {
//     background-color: transparent;
// }

// .ant-table-body::-webkit-scrollbar-thumb {
//     /*box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);*/
//     background: rgba(201, 214, 255, 0.24);
//     border-radius: 3px;
// }

/* Token icons */

.item-token {
    /* Auto layout */

    display: flex;
    flex-direction: row;
    align-items: center;
    padding-left: 8px;
    gap: 8px;

    width: 90%;
    height: 20px;

    /* Inside auto layout */

    flex: none;
    order: 0;
    flex-grow: 0;
}
.token-description {
    cursor: default;
}

.item-usd {
    padding-right: 8px;
}
.icon-token-coinbase {
    width: var(--icon-token-size);
    height: var(--icon-token-size);
    background-image: url('../icons/tokens/coinbase.svg');
    background-size: var(--icon-token-size) var(--icon-token-size);
    background-repeat: no-repeat;
}

.icon-token-ca_0 {
    width: var(--icon-token-size);
    height: var(--icon-token-size);
    background-image: url('../icons/tokens/ca_0.svg');
    background-size: var(--icon-token-size) var(--icon-token-size);
    background-repeat: no-repeat;
}

.icon-token-ca_1 {
    width: var(--icon-token-size);
    height: var(--icon-token-size);
    background-image: url('../icons/tokens/ca_1.svg');
    background-size: var(--icon-token-size) var(--icon-token-size);
    background-repeat: no-repeat;
}

.icon-token-tc {
    width: var(--icon-token-size);
    height: var(--icon-token-size);
    background-image: url('../icons/tokens/tc.svg');
    background-size: var(--icon-token-size) var(--icon-token-size);
    background-repeat: no-repeat;
}

.icon-token-tf {
    width: var(--icon-token-size);
    height: var(--icon-token-size);
    background-image: url('../icons/tokens/tf.svg');
    background-size: var(--icon-token-size) var(--icon-token-size);
    background-repeat: no-repeat;
}
/* ... */

